update, linkar virka og fleiri myndir

--- a/details.html
+++ b/details.html
@@ -16,7 +16,7 @@
         <div class="hamborgari">
             <div class="heim"><a href="index.html">HOME</a></div>
             <div class="um"><a href="um.html">ABOUT</a></div>
-            <div class="myndir"><a href="myndir.html">ART</a></div>
+            <div class="myndir"><a href="index.html">ART</a></div>
             <div class="video"><a href="video.html">VIDEOS</a></div>
             <div class="portfolio"><a href="portfolio.html">PORTFOLIO</a></div>
         </div>
@@ -26,78 +26,59 @@
 
     <br><br><br><br>
     <div class="main-midja">
-        <div class="myndir">
-            <a href="details.html">
-                <img src="myndir/20210226_224638.jpg" alt="">
-            </a>
+        <div class="detail-mynd">
+            <img src="myndir\20210226_224638.jpg" alt="">
+
         </div>
-        <div class="myndir">
-            <img src="myndir/20210314_010937.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/20210803_160901.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/20211121_191508.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/_MG_9484.JPG" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/_W8A2121.png" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/hana_og_stelpa_undir_laki_að_kynnast.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/mynd_2.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/myndir_af_stu1.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/myndir_af_stu2.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/myndir_af_stu3.jpg" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/Untitled-2png.png" alt="">
-        </div>
-        <div class="myndir">
-            <img src="myndir/Untitled-444.jpg" alt="">
+        <br>
+        <div class="textabox">
+            <pre>
+                                       John Cleese talks about, all creativity comes from the unconsiousness,... 
+                                                                              it all boils down to 
+                                                       getting in playful and relaxed frame,
+                             The floor is ready, amps are on, caples and microphones 
+           in place, aucoustic instruments scattered around the floor,
+    just come and join us, no needed prior musical knowledge, 
+ come and play, or just sit with us and enjoy.
+"Everything is an instrument" is an event created be me and my 
+    friend, where we set up a cosy space with lots of instruments 
+         and things to play around with, we invite people to come and do anything, 
+            play the spoon drumming on the glass, play the rice in the box, 
+               make your own shaker, do whatever.
+               For a moment we are all in a trance and everyone 
+             resonates, i‘ts amazing how obvious it is that rythm is
+         primal when you are in a setting like this, get a 
+   lot of people together and start banging on some things 
+ and make noises, magically everyone locks onto the groove,
+magic? What about groove and feeling? Atmoshphere, connections,
+why should we explain it and how,
+
+is there a price to pay for explaining to much, 
+  worries and how much should we care,
+      Dirty Harry by Gorillaz 
+
+           The war is over
+                So said the speaker with the flight suit on
+                    Maybe to him I'm just a pawn
+                            So he can advance
+                                    Remember when I used to dance
+                                            Man, all I want to do is dance
+
+
+
+
+
+
+
+        </pre>
         </div>
     </div>
-    <br><br><br>
 
-    <h1 class="h1-video">Videos</h1>
-
-    <br><br><br>
-    <div class="video-section">
-        <div class="vid">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/v31x7UxQQJA"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </div>
-        <br><br><br>
-        <div class="vid">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/E2Uu4SrbP1M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <br><br><br>
-        <div class="vid">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/TZSKUkK-TL8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        <div class="vid">
-
-        </div>
-
-    </div>
 
     <div class="inspo">
-        
+        <a href="stafroid-upgrade\main-letur.html">HERE YOU CAN WRITE IN THE ALPHABET I MADE !</a>
     </div>
-
+    <br><br><br><br><br>
 </body>
 <script src="index.js">
 
