--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="hamborgari">
             <div class="heim"><a href="index.html">HOME</a></div>
             <div class="um"><a href="um.html">ABOUT</a></div>
-            <div class="myndir"><a href="myndir.html">ART</a></div>
+            <div class="myndir"><a href="index.html">ART</a></div>
             <div class="video"><a href="video.html">VIDEOS</a></div>
             <div class="portfolio"><a href="portfolio.html">PORTFOLIO</a></div>
         </div>
@@ -38,6 +38,12 @@
             <img src="myndir/20210803_160901.jpg" alt="">
         </div>
         <div class="myndir">
+            <img src="myndir\20210805_142817.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\20210810_220548.jpg" alt="">
+        </div>
+        <div class="myndir">
             <img src="myndir/20211121_191508.jpg" alt="">
         </div>
         <div class="myndir">
@@ -47,10 +53,68 @@
             <img src="myndir/_W8A2121.png" alt="">
         </div>
         <div class="myndir">
+            <a href="details3.html">
             <img src="myndir/hana_og_stelpa_undir_laki_að_kynnast.jpg" alt="">
+        </a>
         </div>
         <div class="myndir">
-            <img src="myndir/mynd_2.jpg" alt="">
+            <img src="myndir/3.png" alt="">
+        </div>
+        <div class="myndir">
+            <a href="details2.html">
+            <img src="myndir\20210711_170653.jpg" alt="">
+        </a>
+        </div>
+        <div class="myndir">
+            <img src="myndir/2.png" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir/1.png" alt="">
+        </div>
+        <!-- <div class="myndir">
+            <img src="" alt="">
+        </div> -->
+        <div class="myndir">
+            <img src="myndir\3bois.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\allter.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\eg og sindri.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\eg og stonby.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\mhmm.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\mybois.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\sammála.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\setjupp (1).jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\setjupp (2).jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\setjupptonleika.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\sindri fallegi.jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\tings (1).jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\tings (2).jpg" alt="">
+        </div>
+        <div class="myndir">
+            <img src="myndir\tucker.jpg" alt="">
         </div>
         <div class="myndir">
             <img src="myndir/myndir_af_stu1.jpg" alt="">
@@ -93,11 +157,14 @@
         </div>
 
     </div>
+    <br><br><br><br><br>
+    
 
-    <div class="inspo">
+    <div id="inspo">
         
+        <a href="stafroid-upgrade\main-letur.html">HERE YOU CAN WRITE IN THE ALPHABET I MADE !</a>
     </div>
-
+    <br><br><br><br><br>
 </body>
 <script src="index.js">
 
