final í bili, enjoy

--- a/details.html
+++ b/details.html
@@ -18,7 +18,7 @@
             <div class="um"><a href="um.html">ABOUT</a></div>
             <div class="myndir"><a href="index.html">ART</a></div>
             <div class="video"><a href="video.html">VIDEOS</a></div>
-            <div class="portfolio"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="portfolio"><a href="um.html">PORTFOLIO</a></div>
         </div>
         <div class="logo-nafn"></div>
         <div class="intro-vid-eda-mynd"></div>
