--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="heim"><a href="index.html">HOME</a></div>
             <div class="um"><a href="um.html">ABOUT</a></div>
             <div class="myndir"><a href="index.html">ART</a></div>
-            <div class="video"><a href="video.html">VIDEOS</a></div>
-            <div class="portfolio"><a href="portfolio.html">PORTFOLIO</a></div>
+            <div class="video"><a href="index.html#vid">VIDEOS</a></div>
+            <div class="portfolio"><a href="um.html">PORTFOLIO</a></div>
         </div>
         <div class="logo-nafn"></div>
         <div class="intro-vid-eda-mynd"></div>
@@ -135,8 +135,9 @@
     <br><br><br>
 
     <h1 class="h1-video">Videos</h1>
-
+    <div id="vid"></div>
     <br><br><br>
+    
     <div class="video-section">
         <div class="vid">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/v31x7UxQQJA"
@@ -162,7 +163,7 @@
 
     <div id="inspo">
         
-        <a href="stafroid-upgrade\main-letur.html">HERE YOU CAN WRITE IN THE ALPHABET I MADE !</a>
+        <a href="stafroid-upgrade/main-letur.html">HERE YOU CAN WRITE IN THE ALPHABET I MADE !</a>
     </div>
     <br><br><br><br><br>
 </body>
