--- a/stafroid-upgrade/main-letur.html
+++ b/stafroid-upgrade/main-letur.html
@@ -10,8 +10,7 @@
 </head>
 
 <body>
-    <a href='javascript:history.go(-1)'>GO BACK</a>
-    <!-- having trouble redirecting to index.html, please don't judge, ill fix later oki -->
+    <a href="../index.html">GO BACK</a>
     <br><br><br>
 <div class="head">
     <button type="button" id="svartur">svartur</button>
