--- a/details.html
+++ b/details.html
@@ -17,7 +17,7 @@
             <div class="heim"><a href="index.html">HOME</a></div>
             <div class="um"><a href="um.html">ABOUT</a></div>
             <div class="myndir"><a href="index.html">ART</a></div>
-            <div class="video"><a href="video.html">VIDEOS</a></div>
+            <div class="video"><a href="index.html">VIDEOS</a></div>
             <div class="portfolio"><a href="um.html">PORTFOLIO</a></div>
         </div>
         <div class="logo-nafn"></div>
