--- a/index.html
+++ b/index.html
@@ -28,11 +28,8 @@
     <div class="main-midja">
         <div class="myndir">
             <a href="details.html">
-                <img src="myndir/20210226_224638.jpg" alt="">
+                <img src="myndir/20210226_224638.jpg"alt="">
             </a>
-        </div>
-        <div class="myndir">
-            <img src="myndir/20210314_010937.jpg" alt="">
         </div>
         <div class="myndir">
             <img src="myndir/20210803_160901.jpg" alt="">
@@ -129,6 +126,11 @@
             <img src="myndir/Untitled-2png.png" alt="">
         </div>
         <div class="myndir">
+            <a href="details2.html">
+            <img src="myndir/20210314_010937.jpg" alt="">
+        </a>
+        </div>
+        <div class="myndir">
             <img src="myndir/Untitled-444.jpg" alt="">
         </div>
     </div>
@@ -167,6 +169,14 @@
     </div>
     <br><br><br><br><br>
 </body>
+
+<!-- <div id="myndir">
+    <img id="image1" width="150px" height="150px" onclick="enlargeImg()" src=https......img.jpg">
+  </div>
+   -->
+
+
+
 <script src="index.js">
 
 </script>
