--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
     <!-- Website made by yours truly, thank you for stopping by to look at the code:) -->
+    ****þetta er alvörunni test síðan*****
 
     <div class="head">
         <div class="hamborgari">
